recursion.logo.lessons.recursion.logo.polygonfractal.PolygonFractal.scala.error
PolygonFractal:3: error: not found: value level
  if (level==0) {
      ^PolygonFractal:9: error: not found: value poligonFractal
      poligonFractal(levels-1,sides,length*shrink,shrink)
      ^