recursion.logo.lessons.recursion.logo.polygonfractal.PolygonFractal.scala.code

def polygonFractal (levels:Int, sides:Int, length:Double, shrink:Double) {
  if (level==0) {
  avance(length)
  }
  else {
  
    for (i<-0 to sides-1) {
      poligonFractal(levels-1,sides,length*shrink,shrink)
      droite(360/sides)
      
    }
  }
}